# AdventOfCode

./: .gitignore  README.md  day01.js  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day13.py  day15.js  day16.jl  day16.py  day17.py  day18.py  day19.py  day20.js  day20_input.js  day21.py  day23.py  day24.py
2015/: go.mod  skeleton.go
2017/: day01.js  day01.py  day06.py  day07.py  day09.py  day10.py  day11.py  day12.py  day14.py  day15.js  day15.py  day19.py  day20.js  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py
2018/day1/: index.js
2018/day10/: index.js
2018/day11/: index-summed-area-table.js  index.js
2018/day12/: index.js
2018/day13/: index.js
2018/day14/: index.js
2018/day2/: index.js
2018/day3/: index.js
2018/day4/: index.js
2018/day5/: index.js
2018/day6/: index.js
2018/day7/: index.js
2019/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day09_new.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day22_part2.py  day23.py  day24.py  day24_part2.py  day25.py  intcode.py  intcode2.py  intcodeComputer.py  intcode_final.py
2020/: skeleton.go
2021/: Cargo.toml
2022/: 7  Cargo.toml  README.md  fetch.sh
2022/src/: lib.rs  main.rs
2022/src/day01/: main.rs
2022/src/day02/: main.rs
2022/src/day03/: main.rs
2023/: Cargo.toml  fetch.sh
2023/img/: 20.dot  21.csv  25.dot
2023/inputs/: 01-test.in
2023/src/: lib.rs
(+124 files in other folders)
